# nerd_book_store

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml
nerd_book_store/: asgi.py  settings.py  urls.py  views.py  wsgi.py
nerd_book_store/templates/: hello_world.html
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
