[tool.poetry]
name = "nerd-book-store"
version = "0.1.0"
description = "Nerd Book Store API"
authors = ["André Soares <andre.soares.designer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2,<6.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
flake8 = ">=7.2.0,<8.0.0"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
